Inverse color calculation modified

--- a/client/templates/spriteBox.html
+++ b/client/templates/spriteBox.html
@@ -18,7 +18,7 @@
 					&#x25b6;
 				</span>
 			</div>
-			<div id="infobox" style="color:{{ inverseBackColor }}" >
+			<div id="infobox" style="color:{{ backColor }};background-color:{{ inverseBackColor }}" >
 				{{#if this.metadata.relations}}
 					<span class="relations">
 						{{#each this.metadata.relations}}
