--- a/client/templates/editorMenu.html
+++ b/client/templates/editorMenu.html
@@ -13,6 +13,7 @@
 				<a href="{{ toAddDocPath }}">addDoc</a> |
 				<a href="{{ toColorsPath }}">colors</a> |
 				<a href="{{ toTagsPath }}">tags</a> |
+				<a href="{{ toRelationsPath }}">relations</a> |
 				<a href="{{ toLoginPath }}">{{ thisUserName }}</a>
 				{{#if onSpriteBox}}
 					| <a href="{{ toDocEditPath }}" title="Edit {{onSpriteBox.id}}">{{onSpriteBox.id}}</a>
