Number of relations fixed, Links need an URL now

--- a/client/templates/docEdit.html
+++ b/client/templates/docEdit.html
@@ -103,7 +103,7 @@
 							<input
 								type="text"
 								name="linkURL"
-								placeholder="url (optional)"
+								placeholder="url"
 								id="editLinkURL"
 								maxlength="256"
 								size="31"
