--- a/client/templates/spriteBox.html
+++ b/client/templates/spriteBox.html
@@ -29,7 +29,7 @@
 				{{#if hasLinks}}
 					<span class="links">
 						{{#each showLinks}}
-							<span class="thelink"><a target="_blank" href="{{ this.url }}">{{ this.label }}</a></span>
+							<span class="thelink"><a target="_blank" href="{{ this.url }}" title="{{ this.name }}">{{ this.label }}</a></span>
 						{{/each}}
 					</span>
 				{{/if}}
