Better keyboard navigation for Pool and SpriteBox
– step through images in Pool and open them with return
– go back from SpriteBox to Pool with the escape key

--- a/client/templates/poolHeader.html
+++ b/client/templates/poolHeader.html
@@ -21,7 +21,9 @@
 				class="searchFor"
 				id="searchField"
 				maxlength="24"
-				size="12">
+				size="12"
+				tabIndex = "1"
+			>
 		</form>
 	</span>
 </template>
