Case insensitive sorting for relations, search fixes
Inner whitespace is only removed on tag searches (t:)
tags and relations do not wrap in tags and relations pages

--- a/client/style.less
+++ b/client/style.less
@@ -636,6 +636,9 @@ img {
 		color: @almostBlack;
 		margin: 0;
 		padding: 12px 12px 18px 12px;
+		.tag, .relation {
+			white-space: nowrap;
+		}
 		li {
 			list-style-type: none;
 		}
