New docRender page generates downloadable pngs …
– a (nice) canvas size is selected, based on the proportions and
orientation of the image
– scaling of image is calculated so pixels will display clean and sharp
– Editors can edit the amount of border

--- a/client/style.less
+++ b/client/style.less
@@ -627,9 +627,9 @@ img {
 	}
 }
 
-#tagContainer, #relationsContainer {
+#tagContainer, #relationsContainer, #renderDocContainer {
 	padding: 16px 0 0 0;
-	ol {
+	ol, #canvasBox {
 		strong {
 			color: @navBarText;
 			font-weight: normal;
