--- a/client/templates/pool.html
+++ b/client/templates/pool.html
@@ -8,7 +8,10 @@
 					{{#if showDocInfo}}
 					<div class="docinfo"><span class='remove'>(×)</span>_
 						<a href="{{toDocEditPath}}">
-							{{madeDate}} {{this.metadata.width}}w {{scaledSprite.scaleFactor}}x
+							{{madeDate}} {{scaledSprite.scaleFactor}}x
+						</a>
+						<a href="{{toDocRenderPath}}">
+							R
 						</a>
 					</div>
 					{{/if}}
