New aspect ratios for docRender, small edit

--- a/client/templates/docRender.html
+++ b/client/templates/docRender.html
@@ -18,7 +18,7 @@
 					{{/if}}
 				</div>
 				<div id="name">
-					{{fileName}}
+					{{fileName}}.png
 					{{#if currentUser.profile.isEditor}}
 						– [<a id="genImg" href="" target="_blank" download="{{fileName}}">Download</a>]
 					{{/if}}
