--- a/client/style.less
+++ b/client/style.less
@@ -57,6 +57,7 @@ input.myPixInput,
 .fileUpload,
 .searchForTag,
 .submitLinkButton,
+.bracketButton,
 {
 	cursor: pointer;
 }
@@ -658,4 +659,23 @@ img {
 			content: ''
 		}
 	}
+}
+
+#canvasInfo {
+	margin-bottom: 12px;
+}
+
+#theCanvas {
+	display: inline-flex;
+	-moz-box-shadow: rgba(0, 0, 0, 0.14) 0 2px 2px 0,
+							rgba(0, 0, 0, 0.2) 	0px 3px 1px -2px,
+							rgba(0, 0, 0, 0.12) 0 1px 5px 0;
+
+	-webkit-box-shadow: rgba(0, 0, 0, 0.14) 0 2px 2px 0,
+							rgba(0, 0, 0, 0.2) 	0px 3px 1px -2px,
+							rgba(0, 0, 0, 0.12) 0 1px 5px 0;
+
+	box-shadow: rgba(0, 0, 0, 0.14) 0 2px 2px 0,
+							rgba(0, 0, 0, 0.2) 	0px 3px 1px -2px,
+							rgba(0, 0, 0, 0.12) 0 1px 5px 0;
 }
